openshift/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sliples
  labels:
    app.kubernetes.io/name: sliples
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sliples
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
