openshift/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sliples-api
  namespace: sliples
  labels:
    app.kubernetes.io/name: sliples
    app.kubernetes.io/component: backend
  annotations:
    haproxy.router.openshift.io/timeout: 120s
spec:
  host: sliples.agantis.in
  path: /api
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
